hphp/test/slow/prop-type-hints/reflection.php.expectf
Catchable fatal error: Static property 'A::x' declared as type int, string assigned in %s/reflection.php on line 10
